Adding logging and improving msg handler